@@ -1,5 +1,12 @@
-$Id: Changelog.txt,v 1.223 2016/04/19 21:06:20 nanard Exp $
+$Id: Changelog.txt,v 1.226 2016/12/16 08:57:19 nanard Exp $
 miniUPnP client Changelog.
+
+2016/11/11:
+  check strlen before memcmp in XML parsing portlistingparse.c
+  fix build under SOLARIS and CYGWIN
+
+2016/10/11:
+  Add python 3 compatibility to IGD test
 
 VERSION 2.0 : released 2016/04/19
 
